scripts/nullaway/original/url529c09a30c_kianyangchn_DriveNow_tgz-pJ8-drivenow_tests_TestJ8.txt
../original/url529c09a30c_kianyangchn_DriveNow_tgz-pJ8-drivenow_tests_TestJ8/src/drivenow/entities/Theoriestunde.java:12: error: [NullAway] initializer method does not guarantee @NonNull field fahrlehrerin (line 9) is initialized along all control-flow paths (remember to check for exceptions or early returns).
	public Theoriestunde(int thema, Date beginn) {
	       ^
    (see http://t.uber.com/nullaway )
../original/url529c09a30c_kianyangchn_DriveNow_tgz-pJ8-drivenow_tests_TestJ8/src/drivenow/entities/Fahrlehrerindaten.java:9: error: [NullAway] @NonNull field lehrerinID not initialized
	private String lehrerinID;
	               ^
    (see http://t.uber.com/nullaway )
../original/url529c09a30c_kianyangchn_DriveNow_tgz-pJ8-drivenow_tests_TestJ8/src/drivenow/entities/Fahrlehrerindaten.java:10: error: [NullAway] @NonNull field name not initialized
	private String name;
	               ^
    (see http://t.uber.com/nullaway )
../original/url529c09a30c_kianyangchn_DriveNow_tgz-pJ8-drivenow_tests_TestJ8/src/drivenow/entities/Fahrlehrerindaten.java:11: error: [NullAway] @NonNull field zugewiesenes_auto not initialized
	private Auto zugewiesenes_auto;
	             ^
    (see http://t.uber.com/nullaway )
../original/url529c09a30c_kianyangchn_DriveNow_tgz-pJ8-drivenow_tests_TestJ8/src/drivenow/entities/Fahrlehrerindaten.java:12: error: [NullAway] @NonNull field theoriestunde not initialized
	private ArrayList<Theoriestunde> theoriestunde;
	                                 ^
    (see http://t.uber.com/nullaway )
../original/url529c09a30c_kianyangchn_DriveNow_tgz-pJ8-drivenow_tests_TestJ8/src/drivenow/entities/Fahrlehrerindaten.java:13: error: [NullAway] @NonNull field fahrstunde not initialized
	private ArrayList<Fahrstunde> fahrstunde;
	                              ^
    (see http://t.uber.com/nullaway )
../original/url529c09a30c_kianyangchn_DriveNow_tgz-pJ8-drivenow_tests_TestJ8/src/drivenow/entities/Auto.java:8: error: [NullAway] initializer method does not guarantee @NonNull field fahrlehrerindaten (line 6) is initialized along all control-flow paths (remember to check for exceptions or early returns).
	public Auto(String kennzeichen) {
	       ^
    (see http://t.uber.com/nullaway )
../original/url529c09a30c_kianyangchn_DriveNow_tgz-pJ8-drivenow_tests_TestJ8/src/drivenow/Systemereignis.java:32: error: [NullAway] initializer method does not guarantee @NonNull fields ID (line 23), text (line 30) are initialized along all control-flow paths (remember to check for exceptions or early returns).
	public Systemereignis(Nachricht nachricht) {
	       ^
    (see http://t.uber.com/nullaway )
../original/url529c09a30c_kianyangchn_DriveNow_tgz-pJ8-drivenow_tests_TestJ8/src/drivenow/entities/Fahrschueler.java:20: error: [NullAway] initializer method does not guarantee @NonNull field fahrlehrerindaten (line 14) is initialized along all control-flow paths (remember to check for exceptions or early returns).
	public Fahrschueler(String name, String anschrift) {
	       ^
    (see http://t.uber.com/nullaway )
../original/url529c09a30c_kianyangchn_DriveNow_tgz-pJ8-drivenow_tests_TestJ8/src/drivenow/controls/Ressourcenverwaltung.java:12: error: [NullAway] @NonNull static field instance not initialized
	private static Ressourcenverwaltung instance;
	                                    ^
    (see http://t.uber.com/nullaway )
../original/url529c09a30c_kianyangchn_DriveNow_tgz-pJ8-drivenow_tests_TestJ8/src/drivenow/controls/Ressourcenverwaltung.java:31: error: [NullAway] assigning @Nullable expression to @NonNull field
		instance=null;
		        ^
    (see http://t.uber.com/nullaway )
../original/url529c09a30c_kianyangchn_DriveNow_tgz-pJ8-drivenow_tests_TestJ8/src/drivenow/controls/Ressourcenverwaltung.java:76: error: [NullAway] returning @Nullable expression from method with @NonNull return type
		return null;
		^
    (see http://t.uber.com/nullaway )
../original/url529c09a30c_kianyangchn_DriveNow_tgz-pJ8-drivenow_tests_TestJ8/src/drivenow/controls/Ressourcenverwaltung.java:94: error: [NullAway] returning @Nullable expression from method with @NonNull return type
		return null;
		^
    (see http://t.uber.com/nullaway )
../original/url529c09a30c_kianyangchn_DriveNow_tgz-pJ8-drivenow_tests_TestJ8/src/drivenow/controls/Ressourcenverwaltung.java:110: error: [NullAway] returning @Nullable expression from method with @NonNull return type
		return null;
		^
    (see http://t.uber.com/nullaway )
../original/url529c09a30c_kianyangchn_DriveNow_tgz-pJ8-drivenow_tests_TestJ8/src/drivenow/controls/Ressourcenverwaltung.java:288: error: [NullAway] passing @Nullable parameter 'null' where @NonNull is required
		Systemereignis systemereignis = new Systemereignis(null);
		                                                   ^
    (see http://t.uber.com/nullaway )
../original/url529c09a30c_kianyangchn_DriveNow_tgz-pJ8-drivenow_tests_TestJ8/src/drivenow/controls/Unterrichtsverwaltung.java:13: error: [NullAway] @NonNull static field instance not initialized
	private static Unterrichtsverwaltung instance;
	                                     ^
    (see http://t.uber.com/nullaway )
../original/url529c09a30c_kianyangchn_DriveNow_tgz-pJ8-drivenow_tests_TestJ8/src/drivenow/controls/Unterrichtsverwaltung.java:32: error: [NullAway] assigning @Nullable expression to @NonNull field
		instance=null;
		        ^
    (see http://t.uber.com/nullaway )
../original/url529c09a30c_kianyangchn_DriveNow_tgz-pJ8-drivenow_tests_TestJ8/src/drivenow/controls/Unterrichtsverwaltung.java:44: error: [NullAway] returning @Nullable expression from method with @NonNull return type
		return null;
		^
    (see http://t.uber.com/nullaway )
../original/url529c09a30c_kianyangchn_DriveNow_tgz-pJ8-drivenow_tests_TestJ8/src/drivenow/controls/Unterrichtsverwaltung.java:55: error: [NullAway] returning @Nullable expression from method with @NonNull return type
		return null;
		^
    (see http://t.uber.com/nullaway )
../original/url529c09a30c_kianyangchn_DriveNow_tgz-pJ8-drivenow_tests_TestJ8/src/drivenow/controls/Unterrichtsverwaltung.java:74: error: [NullAway] passing @Nullable parameter 'null' where @NonNull is required
		Systemereignis systemereignis = new Systemereignis(null);
		                                                   ^
    (see http://t.uber.com/nullaway )
../original/url529c09a30c_kianyangchn_DriveNow_tgz-pJ8-drivenow_tests_TestJ8/src/drivenow/controls/Pruefungsverwaltung.java:18: error: [NullAway] initializer method does not guarantee @NonNull field fahrpruefung_bestanden_fahrschueler (line 15) is initialized along all control-flow paths (remember to check for exceptions or early returns).
	public Pruefungsverwaltung() {
	       ^
    (see http://t.uber.com/nullaway )
../original/url529c09a30c_kianyangchn_DriveNow_tgz-pJ8-drivenow_tests_TestJ8/src/drivenow/controls/Pruefungsverwaltung.java:13: error: [NullAway] @NonNull static field instance not initialized
	private static Pruefungsverwaltung instance;
	                                   ^
    (see http://t.uber.com/nullaway )
../original/url529c09a30c_kianyangchn_DriveNow_tgz-pJ8-drivenow_tests_TestJ8/src/drivenow/controls/Pruefungsverwaltung.java:31: error: [NullAway] assigning @Nullable expression to @NonNull field
		instance=null;
		        ^
    (see http://t.uber.com/nullaway )
../original/url529c09a30c_kianyangchn_DriveNow_tgz-pJ8-drivenow_tests_TestJ8/src/drivenow/controls/Pruefungsverwaltung.java:91: error: [NullAway] returning @Nullable expression from method with @NonNull return type
		else return null;
		     ^
    (see http://t.uber.com/nullaway )
../original/url529c09a30c_kianyangchn_DriveNow_tgz-pJ8-drivenow_tests_TestJ8/src/drivenow/DriveNow.java:11: error: [NullAway] @NonNull field fahrlehrerinBoundary not initialized
	private IFahrlehrerinBoundary fahrlehrerinBoundary;
	                              ^
    (see http://t.uber.com/nullaway )
../original/url529c09a30c_kianyangchn_DriveNow_tgz-pJ8-drivenow_tests_TestJ8/src/drivenow/DriveNow.java:12: error: [NullAway] @NonNull field sekretaerBoundary not initialized
	private ISekretaerBoundary sekretaerBoundary;
	                           ^
    (see http://t.uber.com/nullaway )
../original/url529c09a30c_kianyangchn_DriveNow_tgz-pJ8-drivenow_tests_TestJ8/src/drivenow/DriveNow.java:13: error: [NullAway] @NonNull field aktuellesDatum not initialized
	private Date aktuellesDatum;
	             ^
    (see http://t.uber.com/nullaway )
Note: Some input files use or override a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
27 errors
